# runrunrun

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-please.yaml
docs/: included.conf  sample.conf  test.desktop
docs/sample.d/: included.conf
src/: config.pest  lib.rs  main.rs  rrr.rs  rule_set.rs  types.rs  utils.rs
